Prevent overflow for longer quotes

--- a/resources/js/jquery-ui/jquery-ui.css
+++ b/resources/js/jquery-ui/jquery-ui.css
@@ -115,6 +115,7 @@
 	margin: 0;
 	display: block;
 	outline: 0;
+	max-width: 543px; /* Prevent overflow for longer quotes */
 }
 .ui-menu .ui-menu {
 	position: absolute;
